// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager renders collectly with first page 1`] = `
<div
  className="jsx-2002780001 pager"
>
  <span
    className="jsx-2002780001 pager-item"
  />
  <span
    className="jsx-2002780001 pager-item"
  >
    1
  </span>
  <span
    className="jsx-2002780001 pager-item"
  >
    <a
      href="/archive/2"
    >
      2
    </a>
  </span>
</div>
`;

exports[`Pager renders collectly with last page 1`] = `
<div
  className="jsx-2002780001 pager"
>
  <span
    className="jsx-2002780001 pager-item"
  >
    <a
      href="/archive/5"
    >
      5
    </a>
  </span>
  <span
    className="jsx-2002780001 pager-item"
  >
    6
  </span>
  <span
    className="jsx-2002780001 pager-item"
  />
</div>
`;

exports[`Pager renders collectly with second page 1`] = `
<div
  className="jsx-2002780001 pager"
>
  <span
    className="jsx-2002780001 pager-item"
  >
    <a
      href="/archive/1"
    >
      1
    </a>
  </span>
  <span
    className="jsx-2002780001 pager-item"
  >
    2
  </span>
  <span
    className="jsx-2002780001 pager-item"
  >
    <a
      href="/archive/3"
    >
      3
    </a>
  </span>
</div>
`;
